--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "format": "prettier --write .",
     "lint": "eslint .",
     "build": "tsc --build",
-    "start": "node out/main.js --env-file=.env"
+    "start": "node --env-file=.env out/main.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
