--- a/.dockerignore
+++ b/.dockerignore
@@ -10,13 +10,20 @@
 !source/
 !source/**
 !eslint.config.js
+!package.json
+!tsconfig.json
 
 # [+]: Build stage
 !source/
 !source/**
 !package.json
 !tsconfig.json
+!tsconfig.prod.json
 
 # [+]: Run stage
 
 # >-----< EXCLUDES >-----< #
+
+# [-]: MacOS files
+.DS_Store
+**/.DS_Store
