--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# >-----< BUILD ARGUMENTS >-----< #
+
+# >-----< RUNTIME VARIABLES >-----< #
+
 APP_PORT= # Port number for the auth API
 APP_SECRET= # Secret key for the auth API
 
